tests/lang/s01_basics/s02_identifiers/t02_case_sensitivity_error_first_character_comp_fail.nim
## Identifiers match the first letter in a case sensitive manner

discard """
errormsg: "undeclared identifier: 'And'"
line: 10
column: 31
"""


discard true and true == true And true
